--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "fabric": "^5.3.0",
         "file-saver": "^2.0.2",
         "gsap": "^3.8.0",
+        "h5p-standalone": "3.5.1",
         "html2canvas": "^1.4.1",
         "mime-types": "^2.1.32",
         "moment": "^2.26.0",
