--- a/docker/nginx/nginx.conf.template
+++ b/docker/nginx/nginx.conf.template
@@ -5,9 +5,9 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
 	add_header Cache-Control "public, max-age=300";
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
+    #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
     add_header X-Frame-Options "SAMEORIGIN";
-    add_header Referrer-Policy "strict-origin-when-cross-origin";
+    #add_header Referrer-Policy "strict-origin-when-cross-origin";
     #add_header Permissions-Policy "fullscreen=(self)";
     #add_header Content-Security-Policy "default-src 'self'; font-src *;img-src * data:; script-src *; style-src *";
 
@@ -69,12 +69,12 @@ server {
     proxy_connect_timeout 3600s;
     proxy_send_timeout 3600s;
 
-    #gzip
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    ## gzip
+    #gzip on;
+    #gzip_vary on;
+    #gzip_proxied any;
+    #gzip_comp_level 6;
+    #gzip_buffers 16 8k;
+    #gzip_http_version 1.1;
+    #gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
